--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,8 @@
   	<module>01_binary-search</module>
   	<module>02_conways-game-of-life</module>
   </modules>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
