--- a/01_binary-search/pom.xml
+++ b/01_binary-search/pom.xml
@@ -6,6 +6,11 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>01_binary-search</artifactId>
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
+
   <dependencies>
 	<dependency>
 	    <groupId>junit</groupId>
@@ -14,4 +19,5 @@
 	    <scope>test</scope>
 	</dependency>
   </dependencies>
+
 </project>
