Done with setting up basic GUI, had to change the pom file in order for the project to work with java 8 - lambdas.

--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,16 @@
   	<module>01_binary-search</module>
   	<module>02_conways-game-of-life</module>
   </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
